--- a/src/app/schemer/var-coding/var-codes-manual/code-manual.component.html
+++ b/src/app/schemer/var-coding/var-codes-manual/code-manual.component.html
@@ -24,19 +24,36 @@
     </mat-form-field>
   </div>
   <div class="fx-row-start-start">
-    <div class="has-rules-warning">
-      <p *ngIf="code.rules.length > 0" matTooltip="Dieser Code enthält Regeln für das automatische Kodieren.">!!</p>
-    </div>
-    <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
-      <mat-card-subtitle class="fx-row-space-between-center">
-        {{'manual-instruction.prompt-code' | translate}}
-        <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
-          <mat-icon>edit</mat-icon>
-        </button>
-      </mat-card-subtitle>
-      <mat-card-content class="instructions">
-        <div [innerHTML]="code ? getSanitizedText(code.manualInstruction) : null"></div>
-      </mat-card-content>
-    </mat-card>
+    <ng-container *ngIf="code.rules[0] && code.rules[0].method === 'IS_EMPTY'">
+      <div class="has-rules-warning">
+        <p *ngIf="code.manualInstruction"
+           matTooltip="Es gibt Instruktionen für das manuelle Kodieren">!!</p>
+      </div>
+      <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
+        <mat-card-subtitle>{{'code.prompt-auto-coding' | translate}}</mat-card-subtitle>
+        <mat-card-content class="fx-row-start-center">
+          <div [matTooltip]="('rule.' + code.rules[0].method + '.description') | translate"
+               matTooltipShowDelay="500">
+            {{('rule.' + code.rules[0].method) | translate}}
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </ng-container>
+    <ng-container *ngIf="!code.rules[0] || code.rules[0].method !== 'IS_EMPTY'">
+      <div class="has-rules-warning">
+        <p *ngIf="code.rules.length > 0" matTooltip="Dieser Code enthält Regeln für das automatische Kodieren.">!!</p>
+      </div>
+      <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
+        <mat-card-subtitle class="fx-row-space-between-center">
+          {{'manual-instruction.prompt-code' | translate}}
+          <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
+            <mat-icon>edit</mat-icon>
+          </button>
+        </mat-card-subtitle>
+        <mat-card-content class="instructions">
+          <div [innerHTML]="code ? getSanitizedText(code.manualInstruction) : null"></div>
+        </mat-card-content>
+      </mat-card>
+    </ng-container>
   </div>
 </div>
