--- a/src/app/schemer/var-coding/var-codes-value-list/var-codes-value-list.component.html
+++ b/src/app/schemer/var-coding/var-codes-value-list/var-codes-value-list.component.html
@@ -15,7 +15,7 @@
     </div>
     <div [style.padding-bottom.px]="4">
       <mat-form-field [style.width.px]="150">
-        <mat-label>{{'code-model-parameter.value-list-max-score' | translate}}</mat-label>
+        <mat-label>{{'code-model-parameter.max-score' | translate}}</mat-label>
         <input matInput
                type="number"
                required
