--- a/src/app/schemer/var-coding/var-codes-number/code-number.component.html
+++ b/src/app/schemer/var-coding/var-codes-number/code-number.component.html
@@ -30,56 +30,58 @@
     </div>
     <div class="fx-row-start-start fx-flex-fill">
       <div class="has-rules-warning">
-        <p *ngIf="elseCodeExists && code.manualInstruction"
-           matTooltip="Es gibt Instruktionen für das manuelle Kodieren, die unwirksam sind (automatische Kodierung von unbekannten Antworten).">!!</p>
+        <p *ngIf="code.manualInstruction"
+           matTooltip="Es gibt Instruktionen für das manuelle Kodieren, die unnötig sind (automatische Kodierung eindeutig).">!!</p>
       </div>
       <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
         <mat-card-subtitle>{{'code.prompt-auto-coding' | translate}}</mat-card-subtitle>
         <mat-card-content class="fx-row-start-center">
           <div *ngFor="let rule of code.rules" class="fx-row-start-center"
                (mouseover)="showCodeButtonsOf=rule.method" (mouseout)="showCodeButtonsOf=''">
-            <div class="fx-flex-fill fx-column-start-stretch">
+            <div>
               <div [matTooltip]="('rule.' + rule.method + '.description') | translate"
                    matTooltipShowDelay="500">
-                {{('rule.' + rule.method) | translate}}
-                <span *ngIf="rule.method !== 'ELSE'" class="multiline-text">
-                  Mehrzeilig: Neues Wort in neue Zeile schreiben
-                </span>
-              </div>
-              <mat-form-field *ngIf="rule.method !== 'ELSE'">
-                <textarea matInput *ngIf="rule.parameters"
-                          [(ngModel)]="rule.parameters[0]"
-                          (ngModelChange)="setCodeChanged()"
-                          cdkTextareaAutosize
-                          cdkAutosizeMinRows="2"
-                          cdkAutosizeMaxRows="8"></textarea>
+                {{('rule.' + rule.method) | translate}}</div>
+              <mat-form-field *ngIf="getParamCountWrapper(rule.method) < 0">
+              <textarea matInput *ngIf="rule.parameters"
+                        [(ngModel)]="rule.parameters[0]"
+                        (ngModelChange)="setCodeChanged()"
+                        cdkTextareaAutosize
+                        cdkAutosizeMinRows="2"
+                        cdkAutosizeMaxRows="8"></textarea>
+              </mat-form-field>
+              <mat-form-field *ngIf="getParamCountWrapper(rule.method) > 0">
+                <input matInput *ngIf="rule.parameters"
+                       [(ngModel)]="rule.parameters[0]"
+                       (ngModelChange)="setCodeChanged()">
+              </mat-form-field>
+              <mat-form-field *ngIf="getParamCountWrapper(rule.method) > 1">
+                <input matInput *ngIf="rule.parameters"
+                       [(ngModel)]="rule.parameters[1]"
+                       (ngModelChange)="setCodeChanged()">
               </mat-form-field>
             </div>
             <button mat-button [matTooltip]="'rule.prompt.delete' | translate" (click)="deleteRule(rule.method)"
-                    *ngIf="code.rules.length > 1"
+                    *ngIf="singletonRules.indexOf(rule.method) < 0"
                     [class]="showCodeButtonsOf === rule.method ? 'buttonDisplay' : 'buttonHide'">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
           <div class="fx-row-start-center">
-            <button mat-flat-button *ngIf="canAddRule()" (click)="addRule()"
-                    [matTooltip]="'rule.prompt.add-alternate' | translate">
+            <button mat-flat-button [matMenuTriggerFor]="menu" *ngIf="getNewRules().length > 0"
+                    [matTooltip]="'rule.prompt.add' | translate">
               <mat-icon>add</mat-icon>
             </button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item *ngFor="let newSource of getNewRules()" (click)="addRule(newSource)">
+                {{('rule.' + newSource) | translate}}
+              </button>
+            </mat-menu>
+            <div *ngIf="code.rules.length === 0" [matMenuTriggerFor]="menu"
+                 class="no-rules">{{'rule.no-rules' | translate}}</div>
           </div>
         </mat-card-content>
       </mat-card>
     </div>
   </div>
-  <mat-card class="" [style.padding-left.px]="4" *ngIf="!elseCodeExists" [style.width.%]="50">
-    <mat-card-subtitle class="fx-row-space-between-center">
-      {{'manual-instruction.prompt-code' | translate}}
-      <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
-        <mat-icon>edit</mat-icon>
-      </button>
-    </mat-card-subtitle>
-    <mat-card-content class="instructions">
-      <div [innerHTML]="code ? getSanitizedText(code.manualInstruction) : null"></div>
-    </mat-card-content>
-  </mat-card>
 </div>
