Fix layout in some coding models

--- a/src/app/schemer/var-coding/var-codes-full/code-full.component.html
+++ b/src/app/schemer/var-coding/var-codes-full/code-full.component.html
@@ -26,10 +26,10 @@
     </div>
     <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
       <mat-card-subtitle>{{'code.prompt-auto-coding' | translate}}</mat-card-subtitle>
-      <mat-card-content class="fx-row-start-center">
-        <div *ngFor="let rule of code.rules" class="fx-row-start-center"
+      <mat-card-content class="fx-row-start-center fx-flex-fill">
+        <div *ngFor="let rule of code.rules" class="fx-row-start-center fx-flex-fill"
              (mouseover)="showCodeButtonsOf=rule.method" (mouseout)="showCodeButtonsOf=''">
-          <div>
+          <div class="fx-column-start-stretch fx-flex-fill">
             <div [matTooltip]="('rule.' + rule.method + '.description') | translate"
                  matTooltipShowDelay="500">
               {{('rule.' + rule.method) | translate}}</div>
@@ -52,13 +52,13 @@
                      (ngModelChange)="setCodeChanged()">
             </mat-form-field>
           </div>
-          <button mat-button [matTooltip]="'rule.prompt.delete' | translate" (click)="deleteRule(rule.method)"
+          <button mat-icon-button [matTooltip]="'rule.prompt.delete' | translate" (click)="deleteRule(rule.method)"
                   [class]="showCodeButtonsOf === rule.method ? 'buttonDisplay' : 'buttonHide'">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
         <div class="fx-row-start-center">
-          <button mat-flat-button [matMenuTriggerFor]="menu" *ngIf="getNewRules().length > 0"
+          <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="getNewRules().length > 0"
                   [matTooltip]="'rule.prompt.add' | translate">
             <mat-icon>add</mat-icon>
           </button>
@@ -76,7 +76,7 @@
   <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
     <mat-card-subtitle class="fx-row-space-between-center">
       {{'manual-instruction.prompt-code' | translate}}
-      <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
+      <button mat-icon-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
         <mat-icon>edit</mat-icon>
       </button>
     </mat-card-subtitle>
