--- a/src/app/schemer/var-coding/var-codes-value-list/code-value-list.component.html
+++ b/src/app/schemer/var-coding/var-codes-value-list/code-value-list.component.html
@@ -23,7 +23,7 @@
       <mat-form-field class="fx-flex-fill">
         <mat-label>{{'code.description' | translate}}</mat-label>
         <input matInput
-               [readonly]="maxScore < 2"
+               [placeholder]="'code.description' | translate"
                [(ngModel)]="code.label"
                (ngModelChange)="setCodeChanged()">
       </mat-form-field>
@@ -36,7 +36,7 @@
       <mat-card class="fx-flex-fill" [style.padding-left.px]="4">
         <mat-card-subtitle>{{'code.prompt-auto-coding' | translate}}</mat-card-subtitle>
         <mat-card-content class="fx-row-start-center">
-          <div *ngFor="let rule of code.rules" class="fx-row-start-center"
+          <div *ngFor="let rule of code.rules" class="fx-row-start-center fx-flex-fill"
                (mouseover)="showCodeButtonsOf=rule.method" (mouseout)="showCodeButtonsOf=''">
             <div class="fx-flex-fill fx-column-start-stretch">
               <div [matTooltip]="('rule.' + rule.method + '.description') | translate"
@@ -55,14 +55,14 @@
                           cdkAutosizeMaxRows="8"></textarea>
               </mat-form-field>
             </div>
-            <button mat-button [matTooltip]="'rule.prompt.delete' | translate" (click)="deleteRule(rule.method)"
+            <button mat-icon-button [matTooltip]="'rule.prompt.delete' | translate" (click)="deleteRule(rule.method)"
                     *ngIf="code.rules.length > 1"
                     [class]="showCodeButtonsOf === rule.method ? 'buttonDisplay' : 'buttonHide'">
               <mat-icon>delete</mat-icon>
             </button>
           </div>
           <div class="fx-row-start-center">
-            <button mat-flat-button *ngIf="canAddRule()" (click)="addRule()"
+            <button mat-icon-button *ngIf="canAddRule()" (click)="addRule()"
                     [matTooltip]="'rule.prompt.add-alternate' | translate">
               <mat-icon>add</mat-icon>
             </button>
@@ -74,7 +74,7 @@
   <mat-card class="" [style.padding-left.px]="4" *ngIf="!elseCodeExists" [style.width.%]="50">
     <mat-card-subtitle class="fx-row-space-between-center">
       {{'manual-instruction.prompt-code' | translate}}
-      <button mat-flat-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
+      <button mat-icon-button (click)="editTextDialog_manualInstruction(translateService, editTextDialog)">
         <mat-icon>edit</mat-icon>
       </button>
     </mat-card-subtitle>
