--- a/src/app/schemer/var-coding/var-codes-number/var-codes-number.component.html
+++ b/src/app/schemer/var-coding/var-codes-number/var-codes-number.component.html
@@ -20,7 +20,7 @@
                    [elseCodeExists]="elseCodeExists" [isEmptyCodeExists]="isEmptyCodeExists" [isNullCodeExists]="isNullCodeExists"
                    [allCodes]="codes" [maxScore]="codeModelParameters ? codeModelParameters[0] : '1'"
                    (codeChanged)="codesChanged.emit(codes)"></code-number>
-      <button mat-button (click)="deleteCode(cd.id); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
+      <button mat-icon-button (click)="deleteCode(cd.id); updateCodeExistences()" [matTooltip]="'code.prompt.delete' | translate">
         <mat-icon>delete</mat-icon>
       </button>
     </div>
