--- a/src/app/schemer/schemer.component.scss
+++ b/src/app/schemer/schemer.component.scss
@@ -8,7 +8,7 @@
 
 .navi-bar {
   height: 100%;
-  flex: 0 0 200px;
+  flex: 0 0 210px;
   background-color:whitesmoke;
   margin: 0;
   border-left: 5px solid #c4e6e8;
@@ -60,7 +60,7 @@
   padding: 20px;
 }
 
-.var-marker-INVALID_SOURCE, .var-marker-EMPTY, .var-marker-HAS_CODES {
+.var-marker-ERROR, .var-marker-WARNING, .var-marker-OK {
   flex: 0 0 12px;
   height: 12px;
   border-radius: 0;
@@ -68,14 +68,14 @@
   margin-right: 6px;
 }
 
-.var-marker-INVALID_SOURCE {
+.var-marker-ERROR {
   background: #ff3300;
 }
 
-.var-marker-EMPTY {
+.var-marker-WARNING {
   background: #ffcc00;
 }
 
-.var-marker-HAS_CODES {
+.var-marker-OK {
   background: transparent;
 }
