--- a/src/app/schemer/var-coding/var-coding.component.html
+++ b/src/app/schemer/var-coding/var-coding.component.html
@@ -4,12 +4,12 @@
       <mat-form-field>
         <mat-label>{{'description-position' | translate}}</mat-label>
         <input matInput [(ngModel)]="varCoding.label"
-               (change)="varCodingChanged.emit(varCoding)">
+               (change)="lastChangeFrom$.next('label')">
       </mat-form-field>
       <div *ngIf="varCoding.sourceType !== 'BASE'" [style.margin]="'4px 0 4px 20px'" class="fx-column-start-stretch">
         <mat-form-field>
           <mat-label>{{'derive-method.prompt' | translate}}</mat-label>
-          <mat-select [(value)]="varCoding.sourceType" (change)="varCodingChanged.emit(varCoding)">
+          <mat-select [(value)]="varCoding.sourceType" (selectionChange)="lastChangeFrom$.next('derive-method')">
             <mat-option [value]="'COPY_FIRST_VALUE'">
               {{'derive-method.COPY_FIRST_VALUE' | translate}}
             </mat-option>
