Fix initial changeCodingScheme

--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="!varCoding" class="fx-flex-fill">
+  &nbsp;
+</div>
 <div *ngIf="varCoding" class="fx-column-space-between-stretch" [style.padding]="'10px'">
   <div class="fx-row-start-stretch fx-gap-10">
     <div class="fx-column-start-stretch" [style.width.%]="30">
