--- a/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
+++ b/projects/ngx-coding-components/src/lib/var-coding/var-coding.component.html
@@ -52,9 +52,9 @@
         <mat-form-field class="fx-flex-fill">
           <mat-label>{{ 'code-model.prompt' | translate }}</mat-label>
           <mat-select [(value)]="varCoding.codeModel">
-  <!--          <mat-option [value]="'CHOICE'">
+            <mat-option [value]="'CHOICE'">
               {{'code-model.CHOICE' | translate}}
-            </mat-option>-->
+            </mat-option>
             <mat-option [value]="'VALUE_LIST'">
               {{'code-model.VALUE_LIST' | translate}}
             </mat-option>
@@ -115,6 +115,18 @@
                       [codeModelParameters]="varCoding.codeModelParameters"
                       (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
                       [allVariables]="allVariables">
+    </var-codes-value-list>
+    <var-codes-value-list *ngSwitchCase="'CHOICE'"
+                          class="fx-flex-row-100" [style.margin-top.px]="10"
+                          [codes]="varCoding.codes"
+                          (codesChanged)="lastChangeFrom$.next('var-codes-full codes')"
+                          [processing]="varCoding.processing"
+                          (processingChanged)="lastChangeFrom$.next('var-codes-full processing')"
+                          [fragmenting]="varCoding.fragmenting"
+                          (fragmentingChanged)="setFragmenting($event)"
+                          [codeModelParameters]="varCoding.codeModelParameters"
+                          (codeModelParametersChanged)="lastChangeFrom$.next('var-codes-full codeModelParameters')"
+                          [allVariables]="allVariables">
     </var-codes-value-list>
     <var-codes-number *ngSwitchCase="'NUMBER'"
                           class="fx-flex-row-100" [style.margin-top.px]="10"
